cloned base-jekyll-prototype

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,8 +1,8 @@
 title: Architect Steven Baecke
-name: Steven Beacke
+name: Steven Baecke
 street: Stoepestraat 18
 postal: 9960
 locality: Assenede
-email: info@stevenbeacke.be
+email: info@stevenbaecke.be
 tel:
 mobile: 0472 570 162
