--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,7 +33,13 @@ collections:
           - {label: "Image", name: "url", widget: "image", required: false }
           - {label: "Alt", name: "alt", widget: "string", required: false }
           - {label: "Caption", name: "caption", widget: "string", required: false }
-          
+      - label: "Pages"
+        name: pages
+        required: false
+        widget: list
+        fields:
+          - {label: "Url", name: "url", widget: "string", required: false }
+ 
   - name: "posts"
     label: "Projects"
     label_singular: "project"
