--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,6 +37,8 @@ collections:
         name: pages
         required: false
         widget: list
+        field:
+          - {label: "Url", name: "url", widget: "string", required: false }
 
   - name: "posts"
     label: "Projects"
