cloned base-jekyll-prototype

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,6 +37,14 @@ collections:
         name: pages
         required: false
         widget: list
+        field:
+          - label: "Page"
+            name: "url"
+            widget: "relation"
+            collection: "pages"
+            searchFields: ["title", "permalink"]
+            valueField: "permalink"
+
   - name: "posts"
     label: "Projects"
     label_singular: "project"
