cloned base-jekyll-prototype

--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ assets:
     url: null
   sources:
     - _assets
-    - media
+    - _assets/media
   plugins:
     css: { autoprefixer: {}}
     img: { optim: {}}
