--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,6 +5,8 @@ backend:
 
 
 media_folder: "/media/"
+public_folder: "media"
+
 
 collections:
 
@@ -34,7 +36,6 @@ collections:
           - {label: "Alt", name: "alt", widget: "string", required: false }
           - {label: "Caption", name: "caption", widget: "string", required: false }
       - label: "Embedded pages"
-        label_singular: "page"
         name: pages
         required: false
         widget: list
