--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ assets:
     url: null
   sources:
     - _assets
-    - _assets/media
+    - media
   plugins:
     css: { autoprefixer: {}}
     img: { optim: {}}
