--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,7 +26,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string", required: false }
           - {label: "Description", name: "description", widget: "text"}
-      - {label: "Body", name: "body", widget: "markdown" }
+      - {label: "Body", name: "body", widget: "markdown", required: false }
       - label: "Images"
         name: images
         required: false
