--- a/admin/config.yml
+++ b/admin/config.yml
@@ -35,7 +35,7 @@ collections:
           - {label: "Image", name: "url", widget: "image", required: false }
           - {label: "Alt", name: "alt", widget: "string", required: false }
           - {label: "Caption", name: "caption", widget: "string", required: false }
-      - label: "Embedded pages"
+      - label: "Included pages"
         name: pages
         required: false
         widget: list
