--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,7 +18,7 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string" }
       - {label: "Url", name: "permalink", widget: "string" }
-      - {label: "Layout", name: "layout", widget: "hidden", required: true, default: "page" }
+      - {label: "Layout", name: "layout", widget: "select", options: ["page", "card", "projects"], default: "page" }
       - label: "Meta"
         name: meta
         required: false
@@ -41,14 +41,14 @@ collections:
         widget: list
         fields:
           - {label: "Title", name: "title", widget: "string", required: false }
-          - {label: "Url", name: "url", widget: "image", required: false }
+          - {label: "Url", name: "url", widget: "string", required: false }
       - label: "Buttons"
         name: buttons
         required: false
         widget: list
         fields:
           - {label: "Title", name: "title", widget: "string", required: false }
-          - {label: "Url", name: "url", widget: "image", required: false }
+          - {label: "Url", name: "url", widget: "string", required: false }
       - label: "Widgets"
         name: widgets
         required: false
