--- a/admin/config.yml
+++ b/admin/config.yml
@@ -82,7 +82,7 @@ collections:
           - {label: "Image", name: "url", widget: "image", required: false }
           - {label: "Alt", name: "alt", widget: "string", required: false }
           - {label: "Caption", name: "caption", widget: "string", required: false }
-      - {label: "Body", name: "body", widget: "markdown" }
+      - {label: "Body", name: "body", widget: "markdown", required: false }
       - {label: "Published", name: "published", widget: "boolean", default: true}
 
   - name: "forms"
