--- a/admin/config.yml
+++ b/admin/config.yml
@@ -65,7 +65,7 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string" }
       - {label: "Subtitle", name: "subtitle", widget: "string" }
-      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm"}
+      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm", default: "YYYY-MM-DD hh:mm"}
       - {label: "Layout", name: "layout", widget: "hidden", required: true, default: "post" }
       - label: "Meta"
         name: meta
