Update Website “info”

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,8 +1,7 @@
-title: Architect Steven Baecke
+title: Steven Baecke
 name: Steven Baecke
 street: Stoepestraat 18
 postal: 9960
 locality: Assenede
-email: info@stevenbaecke.be
-tel:
 mobile: 0472 570 162
+email: info@stevenbaecke.be
